--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -140,6 +140,7 @@ body {
 	margin: auto;
 	font-family: 'Work Sans';
 	font-size: 14px;
+	background-color: #fffef9;
 }
 
 header {
@@ -182,9 +183,11 @@ nav ul {
 
 }
 
+
 nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
+	margin-bottom: -40%;
 }
 
 li:hover {
@@ -371,13 +374,23 @@ footer nav ul {
 	text-decoration: underline;
 }
 
+#fontLogin {
+
+	font-weight: bold;
+
+}
+
 .bandeauEdition {
 	display: none;
 	background-color: black;
 	color: white;
 	justify-content: center;
 	align-items: center;
-	padding: 0.5rem;
+	padding: 1rem;
+	margin-left: -15%;
+	margin-right: -15%;
+   
+
 }
 
 .titreProjets {
@@ -391,6 +404,12 @@ footer nav ul {
 	font-size: 1.1rem;
 	margin-left: 0.5rem;
 	color: black;
+	font-size: 16px; 
+    background-color: transparent; 
+    border: none;
+    cursor: pointer; 
+    margin-left: 13px;
+	font-size: 12px;
 }
 
 body.connecte .bandeauEdition {
@@ -421,6 +440,7 @@ body.connecte .filtres {
 	height: 50%;
 	width: 50%;
 	background-color: white;
+	border-radius: 10px;
 
 }
 
@@ -431,18 +451,20 @@ body.connecte .filtres {
 .galleryPopup img {
 
 	max-width: 4rem;
-
 }
 
 .galleryPopup {
 
 	display: flex;
-	flex-wrap:wrap;
-	gap: 1rem;
+	display: grid;
+  grid-template-columns:repeat(5, 1fr); 
+ justify-items: center;
+gap: 10px; 
 }
 
 .projet-item {
 	position: relative;
+	display: flex;
 
 }
 
@@ -464,7 +486,79 @@ body.connecte .filtres {
 	height: 50%;
 	width: 50%;
 	background-color: white;
-		
 
-	}
 
+}
+
+.headerProjets {
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.headerProjets h2 {
+
+	margin: 0;
+	font-size: 24px;
+}
+
+.boutonModifier {
+    font-size: 16px; 
+    background-color: transparent; 
+    border: none; 
+    cursor: pointer; 
+    margin-left: 13px;
+	font-family: 'Poppins' ;
+	font-size: 12px;
+	margin-bottom: 20px;
+}
+
+.ajouterPhotoBtn {
+
+  font-family: 'Syne';
+  font-weight: 700;
+  color: white;
+  background-color: #1D6154;
+  margin: 2em auto;
+  width: 180px;
+  text-align: center;
+  border-radius: 60px;
+  border: none;
+  
+}
+
+
+
+.popupForm h2 {
+
+	text-align: center;
+  font-size: 28px;
+  margin-bottom: 20px;
+}
+
+input, select {
+	width: 100%;
+	padding: 10px;
+	margin: 10px 0 20px 0;
+	border: 1px solid #E0E0E0;
+	border-radius: 5px;
+	font-size: 16px;
+	background-color: #FAFAFA #FAFAFA;
+}
+
+.popupForm .btnValider {
+
+	display: flex;
+	justify-content: center;
+	width: 50%;
+	padding: 12px;
+	background-color: #C4C4C4;
+	border: none;
+	border-radius: 5px;
+	color: white;
+	font-size: 16px;
+	cursor: pointer;
+	margin-top: 20px;
+  
+}
